--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "simplicio-tools",
   "version": "0.0.1",
+  "repository": "https://github.com/jpanagiotidis/simplicio-tools.git",
   "description": "A javascript library for client side development.",
   "main": "simplicio-tools.js",
   "scripts": {
@@ -14,7 +15,10 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "0.4.5",
+    "grunt-contrib-compass": "^1.0.3",
     "grunt-contrib-sass": "0.9.2",
-    "grunt-contrib-watch": "0.6.1"
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-jsdoc": "^0.6.7",
+    "jsdoc": "^3.3.2"
   }
 }
