--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "0.4.5",
-    "grunt-contrib-compass": "^1.0.3",
-    "grunt-contrib-sass": "0.9.2",
+    "grunt-contrib-compass": "1.0.3",
     "grunt-contrib-watch": "0.6.1",
-    "grunt-jsdoc": "^0.6.7",
-    "jsdoc": "^3.3.2"
+    "grunt-jsdoc-ng": "0.0.3"
   }
 }
