--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "grunt": "0.4.5",
     "grunt-contrib-compass": "1.0.3",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "0.6.1",
     "grunt-jsdoc-ng": "0.0.3"
   }
